[gd_scene load_steps=13 format=3 uid="uid://cefk00qrd2w1n"]

[ext_resource type="Script" path="res://scripts/ghost_player.gd" id="1_axoaw"]
[ext_resource type="Texture2D" uid="uid://q1qgmlqgdhn1" path="res://sprites/icon1.png" id="1_rdh74"]
[ext_resource type="Texture2D" uid="uid://cxe4ja5eidhu6" path="res://sprites/GhostPlayer/idle1.png" id="2_l4y4x"]
[ext_resource type="Texture2D" uid="uid://bydl0drk2w2ee" path="res://sprites/GhostPlayer/down1.png" id="3_0amxs"]
[ext_resource type="Texture2D" uid="uid://l4j8lc0yquac" path="res://sprites/GhostPlayer/idle2.png" id="3_4y58x"]
[ext_resource type="Texture2D" uid="uid://bgs4h1qu4c0xd" path="res://sprites/GhostPlayer/down_left1.png" id="4_3r5t6"]
[ext_resource type="Texture2D" uid="uid://da7kaudxg8jpj" path="res://sprites/GhostPlayer/idle3.png" id="4_dp5wl"]
[ext_resource type="Texture2D" uid="uid://ewg0ip2amjdw" path="res://sprites/GhostPlayer/left1.png" id="8_ofvjc"]
[ext_resource type="Texture2D" uid="uid://dllyjvi87vk5o" path="res://sprites/GhostPlayer/up1.png" id="9_jwnrp"]
[ext_resource type="Texture2D" uid="uid://dntpv34n6825t" path="res://sprites/GhostPlayer/up_left1.png" id="10_05xoy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3d842"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0amxs")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3r5t6")
}],
"loop": true,
"name": &"down_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_l4y4x")
}, {
"duration": 1.0,
"texture": ExtResource("3_4y58x")
}, {
"duration": 1.0,
"texture": ExtResource("4_dp5wl")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ofvjc")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jwnrp")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_05xoy")
}],
"loop": true,
"name": &"up_left",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vc2pl"]
radius = 82.75

[node name="GhostPlayer" type="CharacterBody2D"]
z_index = 1
scale = Vector2(0.405, 0.405)
collision_layer = 25
collision_mask = 24
script = ExtResource("1_axoaw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rdh74")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 1)
sprite_frames = SubResource("SpriteFrames_3d842")
animation = &"up_left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vc2pl")

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="dash_timer_reset" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(1, 1)

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_timer_reset" to="." method="_on_dash_timer_reset_timeout"]
